<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/PFAppbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/PFToolbar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/PFUsername_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/PFAddPost_id"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_toStartOf="@id/PFLogout_id"
                    android:layout_toLeftOf="@id/PFLogout_id"
                    android:src="@drawable/ic_add_post"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/PFLogout_id"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_logout"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/PFUserProfileImage_id"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:civ_border_width="2dp"
                    app:civ_border_overlay="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:weightSum="3"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/profileFragmentPosts_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/PFNumberOfPosts_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/posts"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profileFragmentFollowers_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/PFNumberOfFollowers_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profileFragmentFollowing_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/PFNumberOfFollowing_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/PFUserFullName_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/PFBio_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/PFFollowUnFollowButton"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    app:backgroundTint="@color/buttonBg"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/PFEditProfile_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:backgroundTint="@color/buttonBg"
                    android:text="@string/edit_profile"
                    android:textAllCaps="false"
                    android:layout_marginRight="2dp"
                    android:layout_marginEnd="2dp"
                    tools:ignore="ButtonStyle"/>

                <Button
                    android:id="@+id/PFSaved_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saved"
                    app:backgroundTint="@color/buttonBg"
                    android:textAllCaps="false"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    tools:ignore="ButtonStyle"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPhotos_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>